# StereoInspector

./: .gitignore  CMakeLists.txt  README.md  devdoc.md  guide.md  nextstep.md  setup.ps1  stereo_inspector_layout.ini
src/: main.cpp
src/analysis/: Analyzer.cpp  Analyzer.h  DataCollector.cpp  DataCollector.h  FeatureCache.cpp  FeatureCache.h  IStereoAnalyzer.cpp  IStereoAnalyzer.h  IssueClassifier.cpp  IssueClassifier.h  RegionMerger.cpp  RegionMerger.h
src/analysis/modules/: BloomAnalyzer.cpp  BloomAnalyzer.h  BlurAnalyzer.cpp  BlurAnalyzer.h  BrightnessAnalyzer.cpp  BrightnessAnalyzer.h  ContrastAnalyzer.cpp  ContrastAnalyzer.h  EdgeAnalyzer.cpp  EdgeAnalyzer.h  HistogramAnalyzer.cpp  HistogramAnalyzer.h  OcrAnalyzer.cpp  OcrAnalyzer.h  OpticalFlowAnalyzer.cpp  OpticalFlowAnalyzer.h  OrbAnalyzer.cpp  OrbAnalyzer.h  PixelDiffAnalyzer.cpp  PixelDiffAnalyzer.h  ShadowAnalyzer.cpp  ShadowAnalyzer.h  SsimAnalyzer.cpp  SsimAnalyzer.h  StereoCorrespondence.cpp  StereoCorrespondence.h  StereoDetector.cpp  StereoDetector.h  StereoOffsetAnalyzer.cpp  StereoOffsetAnalyzer.h  TemporalAnalyzer.cpp  TemporalAnalyzer.h  VrLensAnalyzer.cpp  VrLensAnalyzer.h
src/capture/: DxgiCapture.cpp  DxgiCapture.h
src/config/: Config.cpp  Config.h
src/core/: Frame.cpp  Frame.h  Types.h
src/input/: InputManager.cpp  InputManager.h
src/logging/: Logger.cpp  Logger.h  ReportGenerator.cpp  ReportGenerator.h
src/overlay/: Overlay.cpp  Overlay.h
src/visualization/: Visualizer.cpp  Visualizer.h
tools/: best_optimized_coeffs.h  optimize_classifier.py  synthetic_dataset_gen.cpp
